added user route
